updated Russian translation

--- a/po/wesnoth-dw/ru.po
+++ b/po/wesnoth-dw/ru.po
@@ -3,8 +3,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-12 17:22+0200\n"
+"POT-Creation-Date: 2011-12-05 16:25+0100\n"
+"PO-Revision-Date: 2011-12-06 11:31+0200\n"
 "Last-Translator: Victor Sergienko <singalen@gmail.com>\n"
 "Language-Team: ZumZoom\n"
 "Language: ru\n"
@@ -620,24 +620,22 @@ msgstr "Это невозможно!"
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:444
 msgid "With their master gone, the undead are vanishing!"
-msgstr ""
+msgstr "Потеряв хозяина, умертвия исчезают!"
 
 #. [unit]: type=Dread Bat, id=Fearsome Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:458
 msgid "Fearsome Bat"
-msgstr ""
+msgstr "Страшная летучая мышь"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "Look! There is a massive bat back here."
-msgstr "Смотрите! Там в углу спряталась летучая мышь."
+msgstr "Смотрите! Там сзади громадная летучая мышь."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:477
 msgid "Be courageous, and attack it anyway!"
-msgstr ""
+msgstr "Смелее! Всё равно нападай!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:481
@@ -645,38 +643,44 @@ msgid ""
 "But it isn’t attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
 msgstr ""
+"Но оно не нападает на <i>меня</i>. Ты думаешь, что если оно теряет хозяина, "
+"то хочет получить нового?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:485
 msgid ""
 "If it does not attack, we shall not kill it. Let us see if it follows us."
 msgstr ""
+"Если оно не нападает, мы не будем его убивать. Посмотрим, пойдёт ли оно за "
+"нами."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
 msgid "That is a mighty bat!"
-msgstr ""
+msgstr "Это сильная мышь!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:495
 msgid "It is no matter. I will destroy it immediately."
-msgstr ""
+msgstr "Неважно. Я сейчас её уничтожу."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:499
 msgid ""
 "Hold a moment! Do you think, with its master gone, it might desire a new one?"
 msgstr ""
+"Подожди! Ты думаешь, что если оно теряет хозяина, то хочет получить нового?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:503
 msgid "If it does not attack, do not kill it. Let us see if it follows us."
 msgstr ""
+"Если оно не нападает, то не убивай его. Посмотрим, пойдёт ли оно за нами."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:540
 msgid "With their master gone, the undead are fading away!"
-msgstr ""
+msgstr "Потеряв хозяина, умертвия распадаются!"
 
 #. [unit]: type=Vampire Bat, id=Friendly Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:555
@@ -685,8 +689,6 @@ msgstr "Дружественная летучая мышь"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:570
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "And look! There is a bat cowering in the corner here."
 msgstr "Смотрите! Там в углу спряталась летучая мышь."
 
@@ -742,33 +744,29 @@ msgstr "По-видимому, у нас теперь есть летучая м
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:647
 msgid "With their master gone, the skeletons are crumbling!"
-msgstr ""
+msgstr "Потеряв хозяина, скелеты рассыпаются!"
 
 #. [unit]: type=Walking Corpse, id=Undead Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:660
-#, fuzzy
-#| msgid "Undead"
 msgid "Undead Bat"
-msgstr "Мертвецы"
+msgstr "Летучая мышь-умертвие"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:669
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid ""
 "Look! There is a bat in the corner here. It is moving, but it looks half "
 "dead."
-msgstr "Смотрите! Там в углу спряталась летучая мышь."
+msgstr "Смотрите! Там в углу летучая мышь. Шевелится, но выглядит полумёртвой."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:678
 msgid "No, that thing is all the way dead."
-msgstr ""
+msgstr "Нет, эта штука совсем умерла."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:684
 msgid "Actually, I believe it is truly dead."
-msgstr ""
+msgstr "Я и правда уверен, что она по-настоящему умерла."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:690
@@ -776,25 +774,23 @@ msgid ""
 "I believe it is undead and has no will of its own, but the Kai may have the "
 "will power to direct it."
 msgstr ""
+"Я уверен, что это умертвие не имеет собственной воли, но у Кая есть сила "
+"направлять его."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:694
 msgid "Fascinating. I shall certainly try."
-msgstr ""
+msgstr "Забавно. Обязательно попробую."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:706
-#, fuzzy
-#| msgid "Look, this chest was in his tent. It is filled with gold!"
 msgid "He had a chest in his tent, too. It is filled with gold!"
-msgstr "Смотрите, этот сундук был в его палатке. Он полон золота!"
+msgstr "У него в палатке был сундук. Полный золота!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:718
-#, fuzzy
-#| msgid "You receive 100 gold."
 msgid "You receive 120 gold."
-msgstr "Вы получили 100 золота."
+msgstr "Вы получили 120 золота."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:725
@@ -1935,23 +1931,14 @@ msgstr "Что? Как это возможно?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:209
-#, fuzzy
-#| msgid ""
-#| "When your grandfather married Indress, he he did not know that Tyegëa had "
-#| "already born him a son. When she delivered your father to Jotha, your "
-#| "grandmother Indress agreed to keep it secret and raise the infant as her "
-#| "own."
 msgid ""
 "When your grandfather married Indress, he did not know that Tyegëa had "
 "already born him a son. When she delivered your father to Jotha, your "
 "grandmother Indress agreed to keep it secret and raise the infant as her own."
 msgstr ""
-"Когда твой дед поженился на Индресс, он не знал что Тигея родила его сына. "
-"Когда она доставила твоего отца на Йоту, твоя мать Индресс согласилась "
-"хранить это в секрете, и растить дитя самой.Когда твой дед поженился на "
-"Индресс, он не знал что Тигея родила его сына. Когда она доставила твоего "
-"отца на Йоту, твоя мать Индресс согласилась хранить это в секрете, и растить "
-"дитя самой."
+"Когда твой дед женился на Индресс, он не знал, что Тигея родила ему сына. "
+"Когда она доставила твоего отца на Йоту, твоя бабка Индресс согласилась "
+"держать это в секрете, и вырастить дитя, как своё собственное."
 
 #. [message]: speaker=Tyegea
 #: data/campaigns/Dead_Water/scenarios/08_Talking_to_Tyegea.cfg:213
@@ -3217,10 +3204,8 @@ msgstr "хвост"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:197
-#, fuzzy
-#| msgid "stunned"
 msgid "female^stunned"
-msgstr "оглушен"
+msgstr "оглушена"
 
 #. [set_variable]
 #: data/campaigns/Dead_Water/units/Brawler.cfg:204
@@ -3472,9 +3457,6 @@ msgstr ""
 "эффект."
 
 #: data/campaigns/Dead_Water/utils/specials.cfg:4
-#, fuzzy
-#| msgid ""
-#| " This unit is able stun its enemies, disrupting their zones of control."
 msgid ""
 " This unit is able to stun its enemies, disrupting their zones of control."
 msgstr "Этот боец может оглушать своих врагов, лишая их зоны контроля."
@@ -3486,16 +3468,13 @@ msgstr "оглушить"
 
 #. [damage]: id=tail_stun
 #: data/campaigns/Dead_Water/utils/specials.cfg:10
-#, fuzzy
-#| msgid ""
-#| "This attack hits so hard that the defender is dazed and can no longer "
-#| "enforce a zone of control. The effect wears off on the defenders next turn"
 msgid ""
 "This attack hits so hard that the defender is dazed and can no longer "
 "enforce a zone of control. The effect wears off on the defender’s next turn."
 msgstr ""
-"Эта атака имеет такую силу, что оглушает противника: оглушённый боец не "
-"может следить за зоной контроля. Эффект пропадает на следующем ходу."
+"Эта атака так сильна, что оглушает противника: оглушённый боец не может "
+"следить за зоной контроля. Эффект заканчивается на следующем ходу "
+"обороняющегося."
 
 #~ msgid "You receive 200 gold."
 #~ msgstr "Вы получили 200 золота."
